# pyspark-delta-table-pytest

./: .gitignore  Dockerfile  README.md  foo.py  pyproject.toml  pytest.ini
.github/actions/python-env-setup/: action.yaml
.github/workflows/: docker.yaml  temp-workflow.yaml
src/: tempfile.py
tests/: test_dataframe.py
